# ygz-stereo-inertial

./: .gitignore  CMakeLists.txt  build.sh
backend/: CMakeLists.txt
backend/include/ygz/: BackendSlidingWindowG2O.h
backend/src/: BackendSlidingWindowG2O.cpp
cmake-modules/: FindDBow2.cmake  FindEigen3.cmake  FindFast.cmake  FindG2O.cmake  FindSophus.cmake
common/: CMakeLists.txt
common/include/ygz/: Feature.h  Frame.h  G2OTypes.h  NumTypes.h  Settings.h  se3.hpp  sophus.hpp
common/src/: MapPoint.cpp
cv/: CMakeLists.txt
cv/src/: Align.cpp  ORBExtractor.cpp  ORBMatcher.cpp  Tracker.cpp  TrackerLK.cpp
examples/: EurocStereoVIO.cpp
leadsense/: CMakeLists.txt  leadsense.cpp  leadsenseVIO.cpp
system/: CMakeLists.txt
system/src/: System.cpp
util/: CMakeLists.txt
util/src/: Viewer.cpp
